--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -3,8 +3,8 @@ title: Influence of temperature and upwelling intensity on oil sardine (*Sardine
 author: ''
 date: '`r format(Sys.time(), "%d %B, %Y")`'
 output:
-  pdf_document: default
   word_document: default
+  pdf_document: default
   html_document: default
 header-includes:
 - \usepackage[labelformat=empty]{caption}
@@ -27,7 +27,7 @@ bibliography: '`r system.file("docs", "Sardine.bib", package = "SardineForecast"
 # Introduction
 
 <!-- indian oil sardine is important -->
-The Indian oil sardine (*Sardinella longiceps* Valenciennes, 1847) is one of the most commercially important fish resources along the southwest coast of India (Figure `r \ref{fig:studyarea}`) and comprises ca 25% of the catch biomass [@Vivekanandanetal2003].  Landings of the Indian oilsardine are highly seasonal and peak during and after the summer monsoon period (June through September), in conjunction with the onset and early relaxation of coastal upwelling. However, the landings of this small pelagic finfish are also highly variable from year to year.  Small pelagics often exhibit high variability due to the effects of environmental conditions on survival and recruitment [@Checkleyetal2009].  In addition, the Indian oil sardine fishery is largely coastal and artisanal thus migration of fish schools in and out of the coastal zone greatly affects exposure to the fishery.
+The Indian oil sardine (*Sardinella longiceps* Valenciennes, 1847) is one of the most commercially important fish resources along the southwest coast of India (Figure `r ref("fig:studyarea")`) and comprises ca 25% of the catch biomass [@Vivekanandanetal2003].  Landings of the Indian oilsardine are highly seasonal and peak during and after the summer monsoon period (June through September), in conjunction with the onset and early relaxation of coastal upwelling. However, the landings of this small pelagic finfish are also highly variable from year to year.  Small pelagics often exhibit high variability due to the effects of environmental conditions on survival and recruitment [@Checkleyetal2009].  In addition, the Indian oil sardine fishery is largely coastal and artisanal thus migration of fish schools in and out of the coastal zone greatly affects exposure to the fishery.
 
 Researchers have examined a variety of environmental variables for their correlation with landings of the Indian oil sardine.  Precipitation during the southwest monsoon [@MurtyEdelman1966; @AntonyRaja1969; @AntonyRaja1972; @Jayaprakash2002] and the day of the monsoon arrival [@Jayaprakash2002] have been widely examined and correlations found, but the reported effects are positive in some studies and negative in others. Precipitation is correlated with monsoon winds which trigger upwelling but may also affect salinity and act as a direct or indirect cue for spawning.  Researchers have also found correlations with various metrics of upwelling intensity during the post-monsoon period [@LonghurstWooster1990; @Madhupratapetal1994; @Jayaprakash2002; @Krishnakumaretal2008; @Thara2011] and with direct measures of productivity, such as nearshore zooplankton and phytoplankton abundance [@Hornell1910; @Nair1952; @NairSubrahmanyan1955; @Madhupratapetal1994; @Georgeetal2012].  Researchers have also found correlations with sea surface temperature (SST); SST  can affect both somatic growth rates and juvenile survival but also can cause fish to move off-shore and away from the shore-based fishery [@Annigeri1969; @PrabhuDhulkhed1970; @Pillai1991].
 
@@ -44,7 +44,7 @@ The life cycle  of the oil sardine fishery begins with the entry of adult fish i
 
 After eggs are spawned, they develop rapidly into larvae within 24 hrs [@Nair1959].  The phytoplankton bloom that provides for sardine larvae food is dependent upon nutrient influx from coastal upwelling and runoff from rivers. The blooms start in the south in June, increase in intensity and spread northward up the coast [@Smitha2010]. Oil sardines grow rapidly during their first few months and can reach 40mm with 2 months (reference). Variation in the bloom initiation time and intensity lead to changes in the food supply to sardine larvae and corresponding changes in their growth rate and survival and the later recruitment of 0-year sardines into the fishery [@Georgeetal2012]. During March to May, the inshore waters warm considerably and sardines move off-shore to deeper waters [@Chidambaram1950].  Catches of sardines are correspondingly low during this time for all size classes.
 
-The age at first maturity occurs at less than one year, at about 150 mm size. Spawning begins during the southwest monsoon period (June-July) when temperature, salinity and suitable food availability are conducive for larval survival and continues into September [@MurtyEdelman1966; @JayaprakashPillai2000;  @Krishnakumaretal2008].  The exact location of oil sardine spawning grounds along the Indian coastline is still unclear [@Nair2016].  The fishery is closed during June to mid-July, and when it commences in mid-July, it is dominated by 1-2.5 year old fish that have recently spawned (spent).  In August a spike of 0-year (40mm) juveniles from the June spawning ofter appears in the catch and another spike of 0-year fish is sometimes seen in February from the last fall spawning.  Overall, catches along the Kerala coast are fairly high throughout the year except during March-May (Figure `r ref("fig:catch")`). 
+The age at first maturity occurs at less than one year, at about 150 mm size. Spawning begins during the southwest monsoon period (June-July) when temperature, salinity and suitable food availability are conducive for larval survival and continues into September [@MurtyEdelman1966; @JayaprakashPillai2000;  @Krishnakumaretal2008].  The fishery is closed during June to mid-July during the monsoon and peak spawning, and when it resumes in mid-July, it is dominated by 1-2.5 year old fish that have recently spawned (spent).  In August a spike of 0-year (40mm) juveniles from the June spawning ofter appears in the catch and another spike of 0-year fish is sometimes seen in February from the last fall spawning.  Overall, catches along the Kerala coast are fairly high throughout the year except during March-May (Figure `r ref("fig:catch")`). 
 
 <!-- What is happening each quarter 
 Catch is reported quarterly not monthly. Along the west coast, the length composition of catches ranges between 50-220mm. 1st year spawners (140-160 mm) enter the fishery during June/July and as the season progresses to September-December, adults occur in reduced quantities and catches are dominated by age-1 juveniles (120-140 mm) that were spawned in the prior season (citation). Seasons of rainfall extremes (weak or intense) cause recruitment failure, while a daily rainfall of 20-30 mm during June-August along the southwest coast may indicate good recruitment to the fishery (citation).
@@ -59,7 +59,7 @@ As the success of commercial fishery for each season is determined by the number
 
 
 <!-- SST is known to be important in Pacific sardine -->
-[@JacobsonMacCall1995; @Checkleyetal2009; @McClatchieetal2010; @LindegrenCheckley2012; @Checkleyetal2017]
+
 
 <!--
 Remote sensing satellites can be used to detect changes in ocean physical, biological and chemical properties, such as surface temperature, winds, surface height, surface waves, rainfall and surface salinity, as well as the ecosystem and water quality changes. These tools are relevant for fisheries management (IOCCG 2009; citation?) as well as development of predictive capabilities.  Add more discussion regarding prior work/references on using satellite data to predict oil sardine catch.  Satellite chlorophyll, SST and SSH have been used to estimate sardine habitat of the west coast of the USA [@Zwolinskietal2011]. In the last few years, satellite measurements of chlorophyll have been used to predict high densities of oil sardines.  This is used a functional tool for producing forecasts for fisherman and has lead to increases in their efficiency (catch per unit effort) (citation)
@@ -139,7 +139,7 @@ The results were similar for models of the landings  during the non-spawning mon
 
 There was no support for using precipitation during the summer monsoon (Jun-Jul) or pre-monsoon period (Apr-May) as an explanatory variable for the catch during the spawning months (Table `r ref("tabappB:spawner-model-precip", pre="B")`) nor the non-spawning months (Table `r ref("tabappB:nonspawner-model-precip", pre="B")`).  This was the case whether precipitation in the current or previous season was used, if precipitation was included as non-linear or non-linear effect, or if the smoothing term (degree of non-linearity allowed) was estimated and thus not constrained, and if either precipitation during monsoon (Jun-Jul) or pre-monsoon (Apr-May) were used as the covariate.
 
-However, we found significant correlation between average sea surface temperature during the early post-spawning period (Jul-Dec) and catch during the spawning season (Table 3, Table `r ref("tabappB:spawner-model-sst", pre="B")`).  Sea surface temperature has been found to be correlated with sardine biomass in a number of other studies [@JacobsonMacCall1995; add the others].  The residual deviance was lowest in a model with SST in both the prior year and two years prior included and with a non-linear response for both. This a similar result to Jacobson and MacCall [-@JacobsonMacCall1995] who found that SST in multiple prior years was supported as explanatory variables for sardine recruitment and productivity.  However the reduction in degrees of freedom was high for this model and it was not supported, despite having the lowest residual degrees of freedom, given the cost (loss of degrees of freedom).  The model with the lowest AIC was a model with only the current year and a non-linear response.  The response shows a step-response with a negative effect at low temperatures and then an increased effect a higher temperatures (Figure `r ref("fig:cov-effects")`).  This type of step-response has been found in studies of the effect of SST on recruitment in Pacific sardines (*citations from Jacobson and MacCall*).  The $R^2$ for this model was 0.40 (Table `r ref("tab:covariate-models")`).
+However, we found significant correlation between average sea surface temperature during the early post-spawning period (Jul-Dec) and catch during the spawning season (Table 3, Table `r ref("tabappB:spawner-model-sst", pre="B")`).  Sea surface temperature has been found to be correlated with sardine biomass in a number of other studies [@JacobsonMacCall1995; add the others].  The residual deviance was lowest in a model with SST in both the prior year and two years prior included and with a non-linear response for both. This a similar result to Jacobson and MacCall [-@JacobsonMacCall1995] who found that SST in multiple prior years was supported as explanatory variables for sardine recruitment and productivity.  However the reduction in degrees of freedom was high for this model and it was not supported, despite having the lowest residual degrees of freedom, given the cost (loss of degrees of freedom).  The model with the lowest AIC was a model with only the current year and a non-linear response.  The response shows a step-response with a negative effect at low temperatures and then an increased effect a higher temperatures (Figure `r ref("fig:cov-effects")`).  This type of step-response has been found in studies of the effect of SST on recruitment in Pacific sardines [@JacobsonMacCall1995].  The $R^2$ for this model was 0.40 (Table `r ref("tab:covariate-models")`).
 
 The strongest predictor of the catch during the spawning season however was the upwelling strength during Jan-Mar (4-6 months prior) in the previous season (Tables `r ref("tab:covariate-models")` and `r ref("tabappB:spawner-model-upw", pre="B")`).  Jan-Mar is a period when the young of the year and age-1 fish would be found feeding in large shoals in the coastal region.  This is also the time of year with the second highest catches and catches that are dominated by small-sized fish (*citation*).  The best supported model included only the upwelling strength in the prior year, without SST included as a covariate (Table `r ref("tab:covariate-models")`).  The $R^2$ for this model was 0.60 and the fitted versus observed catches for this model are shown in Figure `r ref("fig:fittedmodel")`.
 
@@ -148,6 +148,18 @@ For catch in the non-spawning months (Oct-Jun), sea surface temperature during t
 Chlorophyll-a density is speculated to be an important predictor of larval sardine survival  and growth.  In addition, sardines shoal in response to coastal chlorophyll blooms, which brings them in contact with the coastal fisheries.  Thus Cholorophyll-a density is assumed to be an important either covariate or driver of future or current sardine catches.  However, we had chlorophyll-a remote-sensing data only from 1998 onward. Our simplest covariate model required 5 degrees of freedom, thus we were limited in the analyses we could conduct.  In addition, the years, 1998-2014, have relatively low variability in catch sizes; the logged catch sizes during this period range from 10-11 during the spawning months and 11-12 during the nonspawning months.  Second degree polynomial models were fit (Appendix C) to the average log chlorophyll-a density in the current and prior season from quarters 3 (Jul-Sep), 4 (Oct-Dec), and 1 (Jan-Mar).  Chlorophyll-a density was not a significant predictor for the spawning catch for any of the tested combinations of current or prior season and quarter.  The only significant effect was seen for non-spawner catches using chlorophyll-a density in Oct-Dec of the current and prior season (Table `r ref("tabappC:nonspawner-model", pre="C")`).  This matches results which found that the upwelling index in Oct-Dec of the prior season was a predictor for the non-spawning months' catch.  The upwelling index and chlorophyll-a density are both indices of low-trophic level productivity.
 
 # Discussion
+
+Sardines in all the world's ecosystems exhibit large fluctuations in abundance [@Schwartzloseetal2010; @Baumgartneretal1992].  These small forage fish are strongly influenced by natural variability in upwelling driven by both large-scale forces, i.e. El Nino patterns, and by changes in winds and currents and in addition local conditions of temperature, salinity, and oxygen levels have both direct and indirect on sardine recruitment and survivial.
+
+Many studies on Pacific sardines have looked at the correlation between sea surface temperture (SST) and recruitment.  Temperature can have direct effect, an indirect effect on food availability or affect survival [@Houde1987].  Studies in the California Current System, have found that SST explains year-to-year variability in Pacific sardine recruitment [@JacobsonMacCall1995; @Checkleyetal2009; @LindegrenCheckley2012; @Checkleyetal2017].  Consistent with these studies, we also found that SST was the covariate that explained variability in catch anomalies (difference between the landing prediction from prior years' catches).  
+
+McClatchie et al. [-@McClatchieetal2010] found no SST relationship with SST and Pacific sardine recruitment, however their analysis used a linear relationship while both other studies that found a relationship [@JacobsonMacCall1995; @Checkleyetal2017] allowed a non-linear relationship.  Both Jacobson and MacCall (1995) and Checkley et al (2017) found a step-like response function for temperature, where lower temperatures were poor and had negative effects and then at a threshold value the effect became positive.  Our analysis found a similar step-like effect function (Figure ). 
+
+There were three outlier years when catch were much lower than expected based on prior catches.  For these years, sea surface temperature improved the model fit greatly (Figure ).  Need to flesh out.
+
+Discuss density-dependence.  The fact that the prior year catch had a strong explainatory value.
+
+Finish off with implications.  In California Current system, SST is used as an indicator for recruitment and is used in management of harvest.
 
 # References
 
@@ -167,7 +179,7 @@ catchmeds=round(tapply(dat$Kerala, dat$Qtr, median, na.rm=TRUE))
 names(catchmeds)=paste("Q",1:4,sep="")
 ```
 
-Figure `r ref("fig:catch")`. Quarterly catch data 1956-2014 from Kerala. The catches have a strong seasonal pattern with the highest catches in quarter 4  Note that quarter 3 is July-Sept and that the fishery is closed July 1 to Aug 15, thus the fishery is only open 1.5 months in quarter 3. The mean catch (metric tonnes) in quarters 1 to 4 are `r catchmeans["Q1"]`, `r catchmeans["Q2"]`, `r catchmeans["Q3"]`, and `r catchmeans["Q4"]`, respectively.
+Figure `r ref("fig:catch")`. Quarterly catch data 1956-2014 from Kerala. The catches have a strong seasonal pattern with the highest catches in quarter 4  Note that quarter 3 is July-Sept and that the fishery is closed July 1 to Aug 15, thus the fishery is only open 1.5 months in quarter 3. The mean catch (metric tonnes) in quarters 1 to 4 are `r round(catchmeans["Q1"]/1000,1)`, `r round(catchmeans["Q2"]/1000,1)`, `r round(catchmeans["Q3"]/1000,1)`, and `r round(catchmeans["Q4"]/1000,1)` metric tonnes respectively.
 
 Figure `r ref("fig:cartoon")`.  Cartoon of the sardine life-cycle in the SE Indian Ocean and how it interacts with the fishery. 
 
