--- a/Tables.Rmd
+++ b/Tables.Rmd
@@ -11,6 +11,16 @@ header-includes: \usepackage[labelformat=empty]{caption}
 ```
 
 
+```{r child = 'Table_Hypotheses.Rmd'}
+```
+
+#
+
+```{r, results="asis", echo=FALSE}
+cat("\\clearpage")
+```
+
+
 ```{r child = 'Table 1.Rmd'}
 ```
 
